--- a/WonInfo/app/src/main/res/layout/community_item_document.xml
+++ b/WonInfo/app/src/main/res/layout/community_item_document.xml
@@ -199,7 +199,7 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout6"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="42dp"
             android:background="@drawable/all_shape_roundrectanglebox"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -208,7 +208,7 @@
             <EditText
                 android:id="@+id/board1_edit_commentwrite"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:background="@null"
                 android:ems="10"
@@ -221,12 +221,11 @@
 
             <Button
                 android:id="@+id/board1_btn_commentwrite"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
                 android:layout_marginEnd="8dp"
-                android:background="@drawable/ic_send_2"
-                android:backgroundTint="@color/Theme_Blue"
-                android:textStyle="bold"
+                android:background="@drawable/ic_sending"
+                android:backgroundTint="@color/Theme_Gray"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
