--- a/WonInfo/app/src/main/res/layout/community_market_textbroad.xml
+++ b/WonInfo/app/src/main/res/layout/community_market_textbroad.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00ff00"
+    android:background="#ffffff"
     tools:layout_editor_absoluteY="81dp">
 
 
