--- a/WonInfo/app/src/main/res/layout/popup_militaryleave.xml
+++ b/WonInfo/app/src/main/res/layout/popup_militaryleave.xml
@@ -29,10 +29,8 @@
         android:id="@+id/popup_militaryleave_text2"
         android:layout_width="wrap_content"
         android:layout_height="62dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="웹정보서비스 → 정보서비스 → 학적관리 →  휴학신청(입대휴학) → 휴학원서 출력 → 보호자 연서 → 소속지도교수 및 학과(부)장 면담 → 소속대학 교학과 제출 → 확인증 교부"
+        android:text="웹정보서비스 → 정보서비스 → 학적관리 →  휴학신청\n(입대휴학) → 휴학원서 출력 → 보호자 연서 → 소속지도교수 및 학과(부)장 면담 → 소속대학 교학과 제출 → 확인증 교부"
         android:textColor="@color/Theme_Gray"
         android:textSize="@dimen/font_15sp"
         app:layout_constraintEnd_toEndOf="parent"
