--- a/WonInfo/app/src/main/res/layout/home_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/home_main_fragment.xml
@@ -216,7 +216,7 @@ android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/autoViewPager">
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/Listview"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -227,9 +227,9 @@ android:clickable="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
             tools:itemCount="5"
-            tools:listitem="@layout/home_main_list_item">
+            tools:listitem="@layout/home_main_list_item" />
 
-        </ListView>
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
