14일 #게시판내로그아웃 #사진파일이름변경

--- a/WonInfo/app/src/main/res/layout/login_activity.xml
+++ b/WonInfo/app/src/main/res/layout/login_activity.xml
@@ -40,6 +40,7 @@
                     android:layout_height="wrap_content"
                     android:hint="웹정보서비스 ID"
                     android:inputType="text"
+                    android:text="qqqqqq@naver.com"
                     android:textColor="@color/Theme_Black"
                     android:textSize="18sp" />
             </com.github.florent37.materialtextfield.MaterialTextField>
@@ -61,6 +62,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Password"
                     android:inputType="textPassword"
+                    android:text="qqqqqq"
                     android:textColor="@color/Theme_Black"
                     android:textSize="18sp" />
             </com.github.florent37.materialtextfield.MaterialTextField>
