--- a/WonInfo/app/src/main/res/layout/community_list_item.xml
+++ b/WonInfo/app/src/main/res/layout/community_list_item.xml
@@ -117,7 +117,7 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/Theme_Gray"
+        android:background="@color/Theme_LightGray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
