--- a/WonInfo/app/src/main/res/layout/community_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/community_main_fragment.xml
@@ -9,7 +9,7 @@
 
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/community_main_1"
+        android:id="@+id/write2_layout_picture"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="3dp"
@@ -59,7 +59,7 @@
         android:background="@drawable/all_ripple_click"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/community_main_1"
+        app:layout_constraintStart_toEndOf="@+id/write2_layout_picture"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -100,7 +100,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/community_main_2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/community_main_1">
+        app:layout_constraintTop_toBottomOf="@+id/write2_layout_picture">
 
         <TextView
             android:id="@+id/community_main_text3"
