--- a/WonInfo/app/src/main/res/layout/community_write2_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/community_write2_fragment.xml
@@ -25,9 +25,8 @@
     <FrameLayout
         android:id="@+id/frameLayout4"
         android:layout_width="match_parent"
-        android:layout_height="9dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/item_line"
+        android:layout_height="1dp"
+        android:background="@color/Theme_LightGray"
         app:layout_constraintBottom_toTopOf="@+id/write2_edit_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -35,20 +34,32 @@
         app:layout_constraintTop_toBottomOf="@+id/write2_edit_title"
         app:layout_constraintVertical_bias="0.0" />
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/community_main_1"
-        android:layout_width="0dp"
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </HorizontalScrollView>
+
+    <LinearLayout
+        android:id="@+id/write2_layout_picture"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="6dp"
-        android:background="@drawable/all_ripple_click"
+        android:foreground="@drawable/all_ripple_click_foregorund"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout4">
 
         <ImageView
+            android:id="@+id/write2_img_noImage"
             android:layout_width="64dp"
             android:layout_height="64dp"
+            android:layout_gravity="center"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -58,17 +69,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_picture" />
-    </android.support.constraint.ConstraintLayout>
+
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/frameLayout6"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@drawable/item_line"
-        app:layout_constraintBottom_toTopOf="@+id/write2_edit_content"
+        android:layout_height="1dp"
+        android:background="@color/Theme_LightGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/write2_layout_picture" />
 
     <EditText
         android:id="@+id/write2_edit_content"
@@ -82,13 +94,13 @@
         android:minLines="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/community_main_1" />
+        app:layout_constraintTop_toBottomOf="@+id/write2_layout_picture" />
 
     <FrameLayout
         android:id="@+id/frameLayout5"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@drawable/item_line"
+        android:layout_height="1dp"
+        android:background="@color/Theme_LightGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
