한솔 #홈 디자인 변경 #자유시장 디자인 변경

--- a/WonInfo/app/src/main/res/layout/community_item_comment.xml
+++ b/WonInfo/app/src/main/res/layout/community_item_comment.xml
@@ -76,7 +76,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:background="@color/Theme_Red">
+                android:background="@color/Theme_LightGray">
 
             </FrameLayout>
 
