--- a/WonInfo/app/src/main/res/layout/a_24_list_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_24_list_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
@@ -22,9 +23,14 @@
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="B" />
+            android:background="@drawable/ic_placeholder"
+            android:backgroundTint="@color/Theme_Red"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginEnd="3dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -39,7 +45,9 @@
             android:layout_weight="1"
             android:text="등교"
             android:textAlignment="center"
-            android:textSize="@dimen/title_size" />
+            android:textSize="@dimen/title_size"
+            android:textColor="@color/Theme_Blue"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/a_25_text02"
@@ -48,7 +56,9 @@
             android:layout_weight="1"
             android:textSize="@dimen/title_size"
             android:text="하교"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@color/Theme_Blue"
+            android:textStyle="bold"/>
     </LinearLayout>
 
     <LinearLayout
@@ -60,13 +70,17 @@
             android:id="@+id/a_24_leftlist"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            tools:itemCount="5"
+            tools:listitem="@layout/a_24_list_item"/>
 
         <ListView
             android:id="@+id/a_24_rightlist"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            tools:itemCount="5"
+            tools:listitem="@layout/a_24_list_item"/>
     </LinearLayout>
 
 </LinearLayout>
