게시판 수정 페이지 넘버링 #페이지 번호 수정중

--- a/WonInfo/app/src/main/res/layout/community_item_comment.xml
+++ b/WonInfo/app/src/main/res/layout/community_item_comment.xml
@@ -47,7 +47,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="8dp"
             android:text="comment_content"
-            android:textColor="@color/Theme_Gray"
+            android:textColor="@color/Theme_Black"
             android:textSize="@dimen/bigtitle_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
